打包设置主类

--- a/maxSaleMapReduce/pom.xml
+++ b/maxSaleMapReduce/pom.xml
@@ -26,4 +26,22 @@
             <artifactId>hadoop-client</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>org.example.helloHadoop.maxSaleMapReduce.MaxSale</mainClass>
+                        </manifest>
+                    </archive>
+                    <classesDirectory>
+                    </classesDirectory>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
