增加示例集群配置文件

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>maxSaleMapReduce</module>
         <module>common</module>
         <module>hdfsApiExample</module>
+        <module>hadoop-cluster-config</module>
     </modules>
     <packaging>pom</packaging>
 
